# AppFramework

./: AppFramework.sublime-workspace  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  README.md  config.json  cscope.file  cscope.out  dirtre  largefile.ps  largefile.txt  tags
HTML/: FILEMAP  defines.html  files.html  index.html  rebuild.sh
HTML/D/: 10.html  15.html  16.html  21.html  26.html  33.html  35.html  44.html  47.html  54.html  66.html  73.html
HTML/J/: 18.html  20.html  22.html  24.html  28.html  3.html  4.html  5.html  6.html  7.html
HTML/R/: 10.html  14.html  15.html  16.html  18.html  20.html  21.html  26.html  28.html  29.html  30.html  32.html  33.html  37.html  38.html  39.html  4.html  40.html  43.html  44.html  46.html  47.html  49.html  5.html  50.html  51.html  52.html  53.html  54.html  55.html  56.html  58.html  59.html  6.html  60.html  61.html  62.html  63.html  65.html  66.html  (+12 more)
HTML/S/: 133.html  134.html  135.html  136.html  137.html  138.html  139.html  145.html  146.html  147.html  148.html  149.html  150.html  151.html  155.html  160.html  161.html  162.html  163.html  164.html  165.html  166.html  167.html  168.html  170.html  172.html  173.html  174.html  176.html  177.html  179.html
HTML/files/: 180.html  181.html  182.html  183.html  184.html  185.html  186.html  187.html  188.html  189.html
config/: compiler_flags.conf  filedisclaimer.txt  possible_flags.conf  skel.cpp  skel.hpp
debian/: changelog  control
docs/: ArgumentConfig.tex  ConfigManager.tex  EnvVar.tex  Logger.tex  Summary.odt  currentapi10122023.txt  documentation.aux  documentation.tex  documentation.toc  testair.tex
docs/Doxygen/html/: _argument_8cpp.html  _argument_8cpp__incl.map  _argument_8cpp__incl.md5  _argument_config_8cpp.html  _argument_config_8cpp.js  _argument_config_8cpp__incl.map  _argument_config_8cpp__incl.md5  _arguments_8cpp.html  _arguments_8cpp__incl.map  _arguments_8cpp__incl.md5  _command_line_processor_8cpp.html  _command_line_processor_8cpp__incl.map  _command_line_processor_8cpp__incl.md5  _command_parser_8cpp.html  _config_manager_8cpp.html  _config_manager_8cpp.js  _config_manager_8cpp__incl.map  _config_manager_8cpp__incl.md5  _env_var_8cpp.html  _env_var_8cpp__incl.map  _env_var_8cpp__incl.md5  _logger_8cpp.html  _logger_8cpp__incl.map  _logger_8cpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp__incl.map  main_8cpp__incl.md5  navtreedata.js  navtreeindex0.js  testair_8cpp.html  testair_8cpp__incl.map  testair_8cpp__incl.md5
docs/Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  searchdata.js
docs/Doxygen/latex/: _argument_8cpp.tex  _argument_8cpp__incl.md5  _argument_config_8cpp.tex  _argument_config_8cpp__incl.md5  _arguments_8cpp.tex  _arguments_8cpp__incl.md5  _command_line_processor_8cpp.tex  _command_line_processor_8cpp__incl.md5  _command_parser_8cpp.tex  _config_manager_8cpp.tex  _config_manager_8cpp__incl.md5  _env_var_8cpp.tex  _env_var_8cpp__incl.md5  _logger_8cpp.tex  _logger_8cpp__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  testair_8cpp.tex  testair_8cpp__incl.md5
include/: Argument.hpp  ArgumentConfig.hpp  Arguments.hpp  CommandLineProcessor.hpp  ConfigManager.hpp  DefaultSettings.hpp  EnvVar.hpp  Logger.hpp  Version.hpp  testair.hpp
src/: Argument.cpp  ArgumentConfig.cpp  Arguments.cpp  CommandLineProcessor.cpp  CommandParser.cpp  ConfigManager.cpp  DefaultSettings.cpp  EnvVar.cpp  Logger.cpp  largefile.txt  main.cpp  testair.cpp
subprojects/CommandLineProcessor/: Argument.cpp  Argument.hpp  ArgumentConfig.cpp  ArgumentConfig.hpp  Arguments.cpp  Arguments.hpp  CMakeLists.txt  CommandLineProcessor.cpp  CommandLineProcessor.hpp  ConfigManager.cpp  ConfigManager.hpp  DefaultSettings.cpp  DefaultSettings.hpp
subprojects/EnvVar/: CMakeLists.txt  EnvVar.cpp  EnvVar.hpp
subprojects/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
subprojects/StringUtils/: CMakeLists.txt  StringUtils.cpp  StringUtils.hpp  untitled
subprojects/TimeUtils/: #ifndef DTG_HPP  CMakeLists.txt  TimeUtils.cpp  TimeUtils.hpp
subprojects/UiManager/: CMakeLists.txt  GtkUIBuilder.hpp  IUIBuilder.hpp  UIDirector.hpp  UiManager.cpp  UiManager.hpp
subprojects/gtkversion/: GtkWidgetFactory.h  GtkWindow.h  IWidgetFactory.h  IWindow.h  gtk_app  gtkversion  gtkversion.cpp  main.cpp
tools/: append_disclaimer.sh  concatenate_files.sh  create_class.sh  setprojectname.sh  toggle_flags.sh  toggle_flags_gui.sh
ui/: MainWindow.glade  MainWindow.glade~
